# gbmu

./: .gitignore  Cargo.toml  index.html  test
.github/workflows/: main.yaml
assets/: instruction_map.json  sw.js
src/: app.rs  cartridge.rs  cpu.rs  error.rs  gameboy.rs  gui.rs  hram.rs  lcd.rs  lib.rs  main.rs  mmu.rs  parse_instruction_map.rs  ppu.rs  wram.rs
src/app/: game_data.rs  instruction_map.rs
src/cartridge/: header.rs  mbc0.rs
src/cpu/: alu.rs  instructions.rs  loader.rs  registers.rs
src/cpu/instructions/: alu.rs  block_0.rs  block_1.rs  block_2.rs  block_3.rs  loader.rs  prefix.rs
src/mmu/: gpio.rs  hram.rs  oam.rs  vram.rs  wram.rs
