[package]
name = "gbmu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Error handling
anyhow = "1.0.86"

egui = "0.28.1"
eframe = { version = "0.28.1", features = ["default"] }
wasm-bindgen = "0.2.92"
log = "0.4"

[lib]
name = "gbmu"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

# to access the DOM (to hide the loading text)
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.4"

egui_extras = { workspace = false, features = ["default", "image"] }
